--- a/Hippo/UIView/TableViewCell/ConversationView/ConversationView.xib
+++ b/Hippo/UIView/TableViewCell/ConversationView/ConversationView.xib
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ConversationView" customModule="HippoChat" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ConversationView" customModule="Hippo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="407" height="526"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tna-ly-vsx">
                     <rect key="frame" x="0.0" y="0.0" width="407" height="65"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Syu-Cm-JHQ" customClass="So_UIImageView" customModule="HippoChat" customModuleProvider="target">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Syu-Cm-JHQ" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
                             <rect key="frame" x="15" y="10" width="45" height="45"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="45" id="X8v-b5-dnV"/>
                                 <constraint firstAttribute="width" secondItem="Syu-Cm-JHQ" secondAttribute="height" multiplier="1:1" id="qo6-Ua-lDS"/>
                             </constraints>
                         </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bQi-p4-Ray">
+                            <rect key="frame" x="37.5" y="10" width="0.0" height="45"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eA6-Es-Mn0">
                             <rect key="frame" x="75" y="10" width="322" height="45"/>
                             <subviews>
@@ -89,11 +93,15 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="eA6-Es-Mn0" firstAttribute="leading" secondItem="Syu-Cm-JHQ" secondAttribute="trailing" constant="15" id="Ej9-mj-wan"/>
+                        <constraint firstItem="bQi-p4-Ray" firstAttribute="bottom" secondItem="Syu-Cm-JHQ" secondAttribute="bottom" id="Kuh-eb-sg9"/>
                         <constraint firstItem="eA6-Es-Mn0" firstAttribute="top" secondItem="Syu-Cm-JHQ" secondAttribute="top" id="MfE-fh-AHp"/>
+                        <constraint firstItem="bQi-p4-Ray" firstAttribute="top" secondItem="Syu-Cm-JHQ" secondAttribute="top" id="PB2-VU-rLe"/>
                         <constraint firstItem="eA6-Es-Mn0" firstAttribute="bottom" secondItem="Syu-Cm-JHQ" secondAttribute="bottom" id="WTI-MG-vpF"/>
                         <constraint firstItem="Syu-Cm-JHQ" firstAttribute="top" secondItem="Tna-ly-vsx" secondAttribute="top" constant="10" id="a7j-XO-rjb"/>
+                        <constraint firstItem="bQi-p4-Ray" firstAttribute="centerX" secondItem="Syu-Cm-JHQ" secondAttribute="centerX" id="jTV-WX-Np2"/>
                         <constraint firstAttribute="trailing" secondItem="eA6-Es-Mn0" secondAttribute="trailing" constant="10" id="lN0-7C-QrC"/>
                         <constraint firstAttribute="bottom" secondItem="Syu-Cm-JHQ" secondAttribute="bottom" constant="10" id="q5c-QL-QwO"/>
+                        <constraint firstItem="bQi-p4-Ray" firstAttribute="centerY" secondItem="Syu-Cm-JHQ" secondAttribute="centerY" id="smc-ms-pVN"/>
                         <constraint firstItem="Syu-Cm-JHQ" firstAttribute="leading" secondItem="Tna-ly-vsx" secondAttribute="leading" constant="15" id="w4z-UK-QRm"/>
                     </constraints>
                 </view>
